changed Images directory name

--- a/Decoration.html
+++ b/Decoration.html
@@ -51,7 +51,7 @@ letter-spacing:5px;
 <a href="Leaf.art.html" class="link">  <img src="Images/leaf.cover.jpg" height="300px"> <br><br> Leaf Art </font>  </a> 
 </td>
 <td width="300px">
-<a href="Cactus.html" class="link">  <img src="images/cactus.cover.jpg" height="300px"> <br> <br> Geometrical Cactus Pin Cushion  </font>  </a> 
+<a href="Cactus.html" class="link">  <img src="Images/cactus.cover.jpg" height="300px"> <br> <br> Geometrical Cactus Pin Cushion  </font>  </a> 
 
 </td>
 </tr>
@@ -59,7 +59,7 @@ letter-spacing:5px;
 
 <tr align="center">
 <td width="300px">
-<a href="Paper.flowers.html" class="link">   <img src="images/flowers.cover.jpg" height="300px"> <br> <br> Four Paper Succulent Tutorials  </a>
+<a href="Paper.flowers.html" class="link">   <img src="Images/flowers.cover.jpg" height="300px"> <br> <br> Four Paper Succulent Tutorials  </a>
 </td>
 <td width="300px">
 
