Changed references to Image directory

--- a/Cactus.html
+++ b/Cactus.html
@@ -47,7 +47,7 @@ letter-spacing:5px;
 
 <tr align="center">
 <td>
-<img src="images/cactus1.jpg">
+<img src="Images/cactus1.jpg">
 </td>
 </tr>
 
@@ -64,7 +64,7 @@ I made a matching bowl for my clover clips as well which is kind of fun.<br> <br
 
 <tr align="center">
 <td>
-<img src="images/cactus2.jpg">
+<img src="Images/cactus2.jpg">
 </td>
 </tr>
 
@@ -86,7 +86,7 @@ Hot glue<br><br>
 
 <tr align="center">
 <td>
-<img src="images/cactus3.jpg" width="100%">
+<img src="Images/cactus3.jpg" width="100%">
 </td>
 </tr>
 
@@ -115,7 +115,7 @@ Hot glue<br><br>
 
 <tr align="center">
 <td>
-<img src="images/cactus4.jpg" width="100%">
+<img src="Images/cactus4.jpg" width="100%">
 </td>
 </tr>
 
@@ -142,7 +142,7 @@ Hot glue<br><br>
 
 <tr align="center">
 <td>
-<img src="images/cactus5.jpg" width="100%">
+<img src="Images/cactus5.jpg" width="100%">
 </td>
 </tr>
 
@@ -158,7 +158,7 @@ Now, just add pins!
 
 <tr align="center">
 <td>
-<img src="images/cactus6.jpg" width="100%">
+<img src="Images/cactus6.jpg" width="100%">
 </td>
 </tr>
 </table>
