--- a/Occasions.html
+++ b/Occasions.html
@@ -44,10 +44,10 @@ letter-spacing:5px;
 <table cellpadding="40px">
 <tr align="center">
 <td width="300px">
-<a href="Christmas.html" class="link">  <img src="images/christmas.cover.jpg" width="300px">  <br><br> Christmas </a> 
+<a href="Christmas.html" class="link">  <img src="Images/christmas.cover.jpg" width="300px">  <br><br> Christmas </a> 
 </td>
 <td width="300px">
-<a href="easter.html" class="link">  <img src="images/easter.cover.jpg" width="300px">  <br><br> Easter </a> 
+<a href="easter.html" class="link">  <img src="Images/easter.cover.jpg" width="300px">  <br><br> Easter </a> 
 
 </td>
 </tr>
