--- a/Presents.html
+++ b/Presents.html
@@ -57,10 +57,10 @@ letter-spacing:5px;
 <table cellpadding="40px">
 <tr align="center">
 <td width="300px">
-<a href="gems.html" class="link">  <img src="images/gems.cover.jpg" width="300px">  <br><br> Gemstone Soaps </a> 
+<a href="gems.html" class="link">  <img src="Images/gems.cover.jpg" width="300px">  <br><br> Gemstone Soaps </a> 
 </td>
 <td width="300px">
-<a href="bottle.html" class="link">  <img src="images/bottle.cover.jpg" width="300px">  <br><br> Wine Wrap </a> 
+<a href="bottle.html" class="link">  <img src="Images/bottle.cover.jpg" width="300px">  <br><br> Wine Wrap </a> 
 
 </td>
 </tr>
