--- a/bottle.html
+++ b/bottle.html
@@ -57,7 +57,7 @@ I thought I'd share with your our DIY Wine Bottle Gift Wrap project that is so e
 
 <tr align="center">
 <td>
-<img src="images/bottle1.jpg">
+<img src="Images/bottle1.jpg">
 </td>
 </tr>
 
