--- a/gems.html
+++ b/gems.html
@@ -56,7 +56,7 @@ That's right, these beautiful gemstones and crystals are actually soaps! They ar
 
 <tr align="center">
 <td>
-<img src="images/gems1.jpg" width="100%">
+<img src="Images/gems1.jpg" width="100%">
 </td>
 </tr>
 
@@ -88,7 +88,7 @@ fragrance oil (optional)<br>
 
 <tr align="center">
 <td>
-<img src="images/gems2.jpg" width="100%">
+<img src="Images/gems2.jpg" width="100%">
 </td>
 </tr>
 
@@ -102,7 +102,7 @@ Start by cutting each of your soap bases in half. Reserve the clear and opaque h
 
 <tr align="center">
 <td>
-<img src="images/gems3.jpg" width="100%">
+<img src="Images/gems3.jpg" width="100%">
 </td>
 </tr>
 
@@ -116,7 +116,7 @@ Cut the clear soap into small chunks and place into a microwavable glass. Microw
 
 <tr align="center">
 <td>
-<img src="images/gems4.jpg" width="60%">
+<img src="Images/gems4.jpg" width="60%">
 </td>
 </tr>
 
@@ -136,7 +136,7 @@ green + yellow + red = brown<br>
 
 <tr align="center">
 <td>
-<img src="images/gems5.jpg" width="60%">
+<img src="Images/gems5.jpg" width="60%">
 </td>
 </tr>
 
@@ -150,7 +150,7 @@ Repeat the same step with the quarter pound of opaque soap base. Allow to set fo
 
 <tr align="center">
 <td>
-<img src="images/gems6.jpg" width="60%">
+<img src="Images/gems6.jpg" width="60%">
 </td>
 </tr>
 
@@ -164,7 +164,7 @@ Slice the colors into thin slices and small shards. Mix the colors randomly and 
 
 <tr align="center">
 <td>
-<img src="images/gems7.jpg" width="60%">
+<img src="Images/gems7.jpg" width="60%">
 </td>
 </tr>
 
@@ -178,7 +178,7 @@ Melt the quarter piece of clear soap and pour into the soap mold. Then melt the 
 
 <tr align="center">
 <td>
-<img src="images/gems8.jpg" width="60%">
+<img src="Images/gems8.jpg" width="60%">
 </td>
 </tr>
 
@@ -192,7 +192,7 @@ At this point, you can even pop the entire cup into the microwave for 5 seconds 
 
 <tr align="center">
 <td>
-<img src="images/gems9.jpg" width="60%">
+<img src="Images/gems9.jpg" width="60%">
 </td>
 </tr>
 
@@ -206,7 +206,7 @@ Place the wider end on a cutting board and use a paring knife to cut 5-6 vertica
 
 <tr align="center">
 <td>
-<img src="images/gems10.jpg" width="60%">
+<img src="Images/gems10.jpg" width="60%">
 </td>
 </tr>
 
@@ -227,13 +227,13 @@ And most importantly, have fun!
 
 <tr align="center">
 <td>
-<img src="images/gems11.jpg" width="60%">
+<img src="Images/gems11.jpg" width="60%">
 </td>
 </tr>
 
 <tr align="center">
 <td>
-<img src="images/gems12.jpg" width="60%">
+<img src="Images/gems12.jpg" width="60%">
 
 </td>
 </tr>
