--- a/health&beauty.html
+++ b/health&beauty.html
@@ -72,10 +72,10 @@ letter-spacing:5px;
 <table cellpadding="40px">
 <tr align="center">
 <td width="300px">
-<a href="mouthwash.html" class="link">  <img src="images/health&beauty/mouthwash.cover.jpg" width="300px">  <br><br> Minty Clove Mouthwash </a> 
+<a href="mouthwash.html" class="link">  <img src="Images/health&beauty/mouthwash.cover.jpg" width="300px">  <br><br> Minty Clove Mouthwash </a> 
 </td>
 <td width="300px">
-<a href="lipbalm.html" class="link">  <img src="images/health&beauty/lipbalm.cover.jpg" width="300px">  <br><br> Homemade Lip Balm </a> 
+<a href="lipbalm.html" class="link">  <img src="Images/health&beauty/lipbalm.cover.jpg" width="300px">  <br><br> Homemade Lip Balm </a> 
 
 </td>
 </tr>
