--- a/health.html
+++ b/health.html
@@ -57,10 +57,10 @@ letter-spacing:5px;
 <table cellpadding="40px">
 <tr align="center">
 <td width="300px">
-<a href="Health&Beauty.html" class="link">  <img src="images/health&beauty/mouthwash.cover.jpg" width="300px">  <br><br> Minty Clove Mouthwash </a> 
+<a href="Health&Beauty.html" class="link">  <img src="Images/health&beauty/mouthwash.cover.jpg" width="300px">  <br><br> Minty Clove Mouthwash </a> 
 </td>
 <td width="300px">
-<a href="lamb.html" class="link">  <img src="images/easter/lamb.cover.jpg" width="300px">  <br><br> Q-Tip Lamb Craft </a> 
+<a href="lamb.html" class="link">  <img src="Images/easter/lamb.cover.jpg" width="300px">  <br><br> Q-Tip Lamb Craft </a> 
 
 </td>
 </tr>
