--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 	<link rel="icon" type="image/png"
-     href="images/tab.png" />
+     href="Images/tab.png" />
 	<title> DIY </title>
 	</head>
 	
