--- a/lamb.html
+++ b/lamb.html
@@ -55,7 +55,7 @@ Are you looking for a cute craft to celebrate that SPRING IS ALMOST HERE!?  (I h
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb1.jpg">
+<img src="Images/easter/lamb1.jpg">
 </td>
 </tr>
 
@@ -84,7 +84,7 @@ I can't seem to find the original source behind the idea for this craft, but it 
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb2.jpg">
+<img src="Images/easter/lamb2.jpg">
 </td>
 </tr>
 
@@ -98,7 +98,7 @@ First, you'll need to cut out the lamb's body and the lamb's head.  The body is 
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb3.jpg">
+<img src="Images/easter/lamb3.jpg">
 </td>
 </tr>
 
@@ -112,7 +112,7 @@ Next, cut off the tips of the q-tips.  Be prepared - they are going to go flying
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb4.jpg">
+<img src="Images/easter/lamb4.jpg">
 </td>
 </tr>
 
@@ -126,7 +126,7 @@ You aren't going to know how many q-tip pieces you need until you get going.  Ju
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb5.jpg">
+<img src="Images/easter/lamb5.jpg">
 </td>
 </tr>
 
@@ -140,7 +140,7 @@ Start by adding a small line of glue at one end of the lamb's body.  I prefer us
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb6.jpg">
+<img src="Images/easter/lamb6.jpg">
 </td>
 </tr>
 
@@ -154,7 +154,7 @@ Neatly place the q-tip ends over top of the line of glue:
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb7.jpg">
+<img src="Images/easter/lamb7.jpg">
 </td>
 </tr>
 
@@ -168,7 +168,7 @@ Start with the outer edges and overlap the second layer of q-tips on top of the 
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb8.jpg">
+<img src="Images/easter/lamb8.jpg">
 </td>
 </tr>
 
@@ -182,7 +182,7 @@ There's really no magic way of getting it perfect, just do your best to end up w
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb9.jpg">
+<img src="Images/easter/lamb9.jpg">
 </td>
 </tr>
 
@@ -196,7 +196,7 @@ Next, move on to the head.  Add a small amount of glue to the narrow part of the
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb10.jpg">
+<img src="Images/easter/lamb10.jpg">
 </td>
 </tr>
 
@@ -210,7 +210,7 @@ Add more glue and two sideways q-tips for the ears.  Then cover up the ears with
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb11.jpg">
+<img src="Images/easter/lamb11.jpg">
 </td>
 </tr>
 
@@ -224,7 +224,7 @@ Use a fine tip magic marker to draw the closed eyes with eyelashes:
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb12.jpg">
+<img src="Images/easter/lamb12.jpg">
 </td>
 </tr>
 
@@ -238,7 +238,7 @@ And then draw the little nose and mouth.  I had to practice a few times on anoth
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb13.jpg">
+<img src="Images/easter/lamb13.jpg">
 </td>
 </tr>
 
@@ -252,7 +252,7 @@ Use a light pink pencil crayon that is getting kind of dull to draw two little c
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb14.jpg">
+<img src="Images/easter/lamb14.jpg">
 </td>
 </tr>
 
@@ -266,7 +266,7 @@ Next, find a scrap piece of skinny ribbon, tie it into a small bow and glue it t
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb15.jpg">
+<img src="Images/easter/lamb15.jpg">
 </td>
 </tr>
 
@@ -280,7 +280,7 @@ Make sure you wait for everything to dry completely before you glue the head to 
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb16.jpg">
+<img src="Images/easter/lamb16.jpg">
 </td>
 </tr>
 
@@ -294,7 +294,7 @@ Once the lamb is dry, take two clothes pins and glue them to the back of the lam
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb17.jpg">
+<img src="Images/easter/lamb17.jpg">
 </td>
 </tr>
 
@@ -309,7 +309,7 @@ When you are all done, you should have something that looks like this - a super 
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb18.jpg">
+<img src="Images/easter/lamb18.jpg">
 </td>
 </tr>
 
@@ -323,7 +323,7 @@ Since the clothespins are wide at the bottom, your lamb should be able to stand 
 
 <tr align="center">
 <td>
-<img src="images/easter/lamb19.jpg">
+<img src="Images/easter/lamb19.jpg">
 </td>
 </tr>
 
