--- a/main.html
+++ b/main.html
@@ -79,7 +79,7 @@ div.absolute {
 <script type="text/javascript">
 	 var n=0;
 	 var t=0.5; //seconds
-	 var picsrc=["images/main/1.png","images/main/1.1.png","images/main/1.png","images/main/1.1.png","images/main/1.png","images/main/2.png","images/main/3.png","images/main/4.png","images/main/5.png","images/main/6.png","images/main/7.png","images/main/8.png","images/main/9.png","images/main/10.png","images/main/11.png","images/main/12.png","images/main/11.png","images/main/12.png","images/main/11.png","images/main/12.png","images/main/11.png"];
+	 var picsrc=["Images/main/1.png","Images/main/1.1.png","Images/main/1.png","Images/main/1.1.png","Images/main/1.png","Images/main/2.png","Images/main/3.png","Images/main/4.png","Images/main/5.png","Images/main/6.png","Images/main/7.png","Images/main/8.png","Images/main/9.png","Images/main/10.png","Images/main/11.png","Images/main/12.png","Images/main/11.png","Images/main/12.png","Images/main/11.png","Images/main/12.png","Images/main/11.png"];
 	 var pic=new Array();
      for (i=0; i<picsrc.length;i++){
      pic[i]=new Image();
@@ -90,7 +90,7 @@ div.absolute {
      if(n>picsrc.length-1){
      n=0;
      }
-     document.images["tool"].src=pic[n].src;
+     document.Images["tool"].src=pic[n].src;
      setTimeout("slideShow()",1000*t);
      }
      </script>
@@ -104,7 +104,7 @@ div.absolute {
 <tr>
 <td>
 
-<img src="images/minimal1.jpg" width="20%" >
+<img src="Images/minimal1.jpg" width="20%" >
 <div class="absolute">
 <CENTER><img src="1.png" name="tool" width="110%" </CENTER>
 </div>
@@ -114,7 +114,7 @@ div.absolute {
 </table>
 
 <div class="fixed">
-<img src="images/minimal4.jpg" width="100%">
+<img src="Images/minimal4.jpg" width="100%">
 </div>
 
 
