--- a/painted.html
+++ b/painted.html
@@ -54,7 +54,7 @@ I've had some interest in how I make our hanging hand-painted easter eggs, so I 
 
 <tr align="center">
 <td>
-<img src="images/easter/painted1.jpg">
+<img src="Images/easter/painted1.jpg">
 </td>
 </tr>
 
@@ -80,7 +80,7 @@ I've had some interest in how I make our hanging hand-painted easter eggs, so I 
 
 <tr align="center">
 <td>
-<img src="images/easter/painted2.jpg">
+<img src="Images/easter/painted2.jpg">
 </td>
 </tr>
 
@@ -94,7 +94,7 @@ I've had some interest in how I make our hanging hand-painted easter eggs, so I 
 
 <tr align="center">
 <td>
-<img src="images/easter/painted3.jpg">
+<img src="Images/easter/painted3.jpg">
 </td>
 </tr>
 
@@ -110,7 +110,7 @@ I've had some interest in how I make our hanging hand-painted easter eggs, so I 
 
 <tr align="center">
 <td>
-<img src="images/easter/painted4.jpg">
+<img src="Images/easter/painted4.jpg">
 </td>
 </tr>
 
@@ -126,7 +126,7 @@ I've had some interest in how I make our hanging hand-painted easter eggs, so I 
 
 <tr align="center">
 <td>
-<img src="images/easter/painted5.jpg">
+<img src="Images/easter/painted5.jpg">
 </td>
 </tr>
 
@@ -140,7 +140,7 @@ I've had some interest in how I make our hanging hand-painted easter eggs, so I 
 
 <tr align="center">
 <td>
-<img src="images/easter/painted6.jpg">
+<img src="Images/easter/painted6.jpg">
 </td>
 </tr>
 
@@ -154,7 +154,7 @@ For a super-easy cherry blossom motif, first cover your egg with brown twigs.
 
 <tr align="center">
 <td>
-<img src="images/easter/painted7.jpg">
+<img src="Images/easter/painted7.jpg">
 </td>
 </tr>
 
@@ -168,7 +168,7 @@ Then dab on random little splooshes of pink for the flowers. Hooray, it's all fl
 
 <tr align="center">
 <td>
-<img src="images/easter/painted8.jpg">
+<img src="Images/easter/painted8.jpg">
 </td>
 </tr>
 
@@ -182,7 +182,7 @@ Then dab on random little splooshes of pink for the flowers. Hooray, it's all fl
 
 <tr align="center">
 <td>
-<img src="images/easter/painted9.jpg">
+<img src="Images/easter/painted9.jpg">
 </td>
 </tr>
 
@@ -196,7 +196,7 @@ Then dab on random little splooshes of pink for the flowers. Hooray, it's all fl
 
 <tr align="center">
 <td>
-<img src="images/easter/painted10.jpg">
+<img src="Images/easter/painted10.jpg">
 </td>
 </tr>
 
@@ -214,7 +214,7 @@ In Norway it is traditional to bring in some cut branches to hang your decorated
 
 <tr align="center">
 <td>
-<img src="images/easter/painted11.jpg">
+<img src="Images/easter/painted11.jpg">
 </td>
 </tr>
 
