--- a/paper.flowers.html
+++ b/paper.flowers.html
@@ -49,7 +49,7 @@ letter-spacing:5px;
 
 <tr align="center">
 <td colspan="2">
-<img src="images/flowers1.jpg">
+<img src="Images/flowers1.jpg">
 </td>
 </tr>
 
@@ -63,7 +63,7 @@ I am officially in love with paper succulents! These are so fun to make using a 
 
 <tr align="center">
 <td colspan="2">
-<img src="images/flowers2.jpg">
+<img src="Images/flowers2.jpg">
 </td>
 </tr>
 
@@ -77,19 +77,19 @@ Here are some ideas of how you can use those beautiful flowers!
 
 <tr align="center" >
 <td >
-<img src="images/flowers3.jpg" width="100%" >
+<img src="Images/flowers3.jpg" width="100%" >
 </td>
 <td>
-<img src="images/flowers4.jpg" width="100%">
+<img src="Images/flowers4.jpg" width="100%">
 </td>
 </tr>
 
 <tr align="center" >
 <td>
-<img src="images/flowers5.jpg" width="100%">
+<img src="Images/flowers5.jpg" width="100%">
 </td>
 <td>
-<img src="images/flowers6.jpg" width="100%">
+<img src="Images/flowers6.jpg" width="100%">
 </td>
 </tr>
 
