--- a/tea.html
+++ b/tea.html
@@ -61,7 +61,7 @@ You can just sign your name to him and it looks like you went to a lot more effo
 
 <tr align="center">
 <td>
-<img src="images/christmas/tea1.jpg">
+<img src="Images/christmas/tea1.jpg">
 </td>
 </tr>
 
@@ -83,7 +83,7 @@ You can just sign your name to him and it looks like you went to a lot more effo
 
 <tr align="center">
 <td>
-<img src="images/christmas/tea2.jpg">
+<img src="Images/christmas/tea2.jpg">
 </td>
 </tr>
 
