--- a/main.html
+++ b/main.html
@@ -90,7 +90,7 @@ div.absolute {
      if(n>picsrc.length-1){
      n=0;
      }
-     document.Images["tool"].src=pic[n].src;
+     document.images["tool"].src=pic[n].src;
      setTimeout("slideShow()",1000*t);
      }
      </script>
