--- a/Occasions.html
+++ b/Occasions.html
@@ -47,7 +47,7 @@ letter-spacing:5px;
 <a href="Christmas.html" class="link">  <img src="Images/christmas.cover.jpg" width="300px">  <br><br> Christmas </a> 
 </td>
 <td width="300px">
-<a href="easter.html" class="link">  <img src="Images/easter.cover.jpg" width="300px">  <br><br> Easter </a> 
+<a href="Easter.html" class="link">  <img src="Images/easter.cover.jpg" width="300px">  <br><br> Easter </a> 
 
 </td>
 </tr>
