Capital letters html files

--- a/Decoration.html
+++ b/Decoration.html
@@ -59,7 +59,7 @@ letter-spacing:5px;
 
 <tr align="center">
 <td width="300px">
-<a href="Paper.flowers.html" class="link">   <img src="Images/flowers.cover.jpg" height="300px"> <br> <br> Four Paper Succulent Tutorials  </a>
+<a href="PaperFlowers.html" class="link">   <img src="Images/flowers.cover.jpg" height="300px"> <br> <br> Four Paper Succulent Tutorials  </a>
 </td>
 <td width="300px">
 
