--- a/banner.html
+++ b/banner.html
@@ -47,7 +47,7 @@ text-shadow:1.5px 1.5px grey}
 	<td><a href="Decoration.html" class="link">  Decoration   </a> </td>
 	<td><a href="Presents.html" class="link">  Presents   </a></td>
 	<td><a href="Occasions.html" class="link">  Occasions   </a></td>
-	<td><a href="Health.html" class="link">  Health and Beauty    </a></td>
+	<td><a href="Healthbeauty.html" class="link">  Health & Beauty    </a></td>
 	</tr> </table>
 </center>
 </body>
