--- a/healthbeauty.html
+++ b/healthbeauty.html
@@ -60,10 +60,10 @@ letter-spacing:5px;
 <table cellpadding="40px">
 <tr align="center">
 <td width="300px">
-<a href="mouthwash.html" class="link">  <img src="Images/health&beauty/mouthwash.cover.jpg" width="300px">  <br><br> Minty Clove Mouthwash </a> 
+<a href="Mouthwash.html" class="link">  <img src="Images/health&beauty/mouthwash.cover.jpg" width="300px">  <br><br> Minty Clove Mouthwash </a> 
 </td>
 <td width="300px">
-<a href="lipbalm.html" class="link">  <img src="Images/health&beauty/lipbalm.cover.jpg" width="300px">  <br><br> Homemade Lip Balm </a> 
+<a href="Lipbalm.html" class="link">  <img src="Images/health&beauty/lipbalm.cover.jpg" width="300px">  <br><br> Homemade Lip Balm </a> 
 
 </td>
 </tr>
