--- a/Easter.html
+++ b/Easter.html
@@ -57,10 +57,10 @@ letter-spacing:5px;
 <table cellpadding="40px">
 <tr align="center">
 <td width="300px">
-<a href="painted.html" class="link">  <img src="Images/easter/painted.cover.jpg" width="300px">  <br><br> Painted Easter Egg Tutorial </a> 
+<a href="Painted.html" class="link">  <img src="Images/easter/painted.cover.jpg" width="300px">  <br><br> Painted Easter Egg Tutorial </a> 
 </td>
 <td width="300px">
-<a href="lamb.html" class="link">  <img src="Images/easter/lamb.cover.jpg" width="300px">  <br><br> Q-Tip Lamb Craft </a> 
+<a href="Lamb.html" class="link">  <img src="Images/easter/lamb.cover.jpg" width="300px">  <br><br> Q-Tip Lamb Craft </a> 
 
 </td>
 </tr>
