--- a/Christmas.html
+++ b/Christmas.html
@@ -83,10 +83,10 @@ letter-spacing:5px;
 <table cellpadding="40px">
 <tr align="center">
 <td width="300px">
-<a href="garland.html" class="link">  <img src="Images/christmas/garland.cover.jpg" width="300px">  <br><br> DIY: Glitter Bow Garland </a> 
+<a href="Garland.html" class="link">  <img src="Images/christmas/garland.cover.jpg" width="300px">  <br><br> DIY: Glitter Bow Garland </a> 
 </td>
 <td width="300px">
-<a href="tea.html" class="link">  <img src="Images/christmas/tea.cover.jpg" width="300px">  <br><br> Happy Holidays: Tea Gift Idea </a> 
+<a href="Tea.html" class="link">  <img src="Images/christmas/tea.cover.jpg" width="300px">  <br><br> Happy Holidays: Tea Gift Idea </a> 
 
 </td>
 </tr>
