References to images updated

--- a/Lipbalm.html
+++ b/Lipbalm.html
@@ -63,7 +63,7 @@ This recipe also includes a little castor oil because it leaves a soft, glossy s
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/lipbalm1.jpg">
+<img src="Images/Healthandbeauty/lipbalm1.jpg">
 </td>
 </tr>
 
@@ -96,7 +96,7 @@ Sterilized lip balm containers or tubes<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/lipbalm2.jpg">
+<img src="Images/Healthandbeauty/lipbalm2.jpg">
 </td>
 </tr>
 
@@ -110,7 +110,7 @@ Sterilized lip balm containers or tubes<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/lipbalm3.jpg">
+<img src="Images/Healthandbeauty/lipbalm3.jpg">
 </td>
 </tr>
 
@@ -124,7 +124,7 @@ Sterilized lip balm containers or tubes<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/lipbalm4.jpg">
+<img src="Images/Healthandbeauty/lipbalm4.jpg">
 </td>
 </tr>
 
@@ -140,14 +140,14 @@ Sterilized lip balm containers or tubes<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/lipbalm5.jpg">
+<img src="Images/Healthandbeauty/lipbalm5.jpg">
 </td>
 </tr>
 
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/lipbalm6.jpg">
+<img src="Images/Healthandbeauty/lipbalm6.jpg">
 </td>
 </tr>
 
@@ -161,7 +161,7 @@ Sterilized lip balm containers or tubes<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/lipbalm7.jpg">
+<img src="Images/Healthandbeauty/lipbalm7.jpg">
 </td>
 </tr>
 
@@ -175,7 +175,7 @@ Sterilized lip balm containers or tubes<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/lipbalm8.jpg">
+<img src="Images/Healthandbeauty/lipbalm8.jpg">
 </td>
 </tr>
 
@@ -189,13 +189,13 @@ Sterilized lip balm containers or tubes<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/lipbalm9.jpg">
+<img src="Images/Healthandbeauty/lipbalm9.jpg">
 </td>
 </tr>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/lipbalm10.jpg">
+<img src="Images/Healthandbeauty/lipbalm10.jpg">
 </td>
 </tr>
 
@@ -209,7 +209,7 @@ A single batch of this recipe should be enough to fill 4 to 5 small lip balm con
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/lipbalm11.jpg">
+<img src="Images/Healthandbeauty/lipbalm11.jpg">
 </td>
 </tr>
 
