--- a/MintMouthwash.html
+++ b/MintMouthwash.html
@@ -62,7 +62,7 @@ Making your own mouthwash has several very important benefits over OTC mouthwash
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/mouthwash1.jpg">
+<img src="Images/Healthandbeauty/mouthwash1.jpg">
 </td>
 </tr>
 
@@ -118,7 +118,7 @@ A small bottle<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/mouthwash2.jpg">
+<img src="Images/Healthandbeauty/mouthwash2.jpg">
 </td>
 </tr>
 
@@ -132,7 +132,7 @@ A small bottle<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/mouthwash3.jpg">
+<img src="Images/Healthandbeauty/mouthwash3.jpg">
 </td>
 </tr>
 
@@ -146,7 +146,7 @@ A small bottle<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/mouthwash4.jpg">
+<img src="Images/Healthandbeauty/mouthwash4.jpg">
 </td>
 </tr>
 
@@ -160,7 +160,7 @@ A small bottle<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/mouthwash5.jpg">
+<img src="Images/Healthandbeauty/mouthwash5.jpg">
 </td>
 </tr>
 
@@ -174,7 +174,7 @@ A small bottle<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/mouthwash6.jpg">
+<img src="Images/Healthandbeauty/mouthwash6.jpg">
 </td>
 </tr>
 
@@ -188,7 +188,7 @@ A small bottle<br>
 
 <tr align="center">
 <td>
-<img src="Images/health&beauty/mouthwash7.jpg">
+<img src="Images/Healthandbeauty/mouthwash7.jpg">
 </td>
 </tr>
 
